gccida/c2/df_analyse_1
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/df_analyse_1/src/df.c:2406:1: error: must use 'enum' tag to refer to type 'df_ref_flags'
df_ref_flags v5; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/df_analyse_1/src/df.c:2665:4: error: expected ';' after expression
rtx v264; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/df_analyse_1/src/df.c:2665:5: error: use of undeclared identifier 'v264'
rtx v264; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/df_analyse_1/src/df.c:2667:4: error: expected ';' after expression
rtx v266; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/df_analyse_1/src/df.c:2667:5: error: use of undeclared identifier 'v266'
rtx v266; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/df_analyse_1/src/df.c:2692:4: error: expected ';' after expression
rtx v291; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/df_analyse_1/src/df.c:2692:5: error: use of undeclared identifier 'v291'
rtx v291; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/df_analyse_1/src/df.c:2696:4: error: expected ';' after expression
rtx v295; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/df_analyse_1/src/df.c:2696:5: error: use of undeclared identifier 'v295'
rtx v295; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/df_analyse_1/src/df.c:2844:13: error: expected identifier or '('
 struct ref = uses->ref; 
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/df_analyse_1/src/df.c:2852:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v45.rtwint = ( __int64)chain->fld[0]; 
                       ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/df_analyse_1/src/df.c:2860:14: error: expected expression
if ( v48 ==  struct ref ) 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/df_analyse_1/src/df.c:2867:36: error: expected expression
while ( (  struct ref *)v47[1] !=  struct ref ) 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/df_analyse_1/src/df.c:2881:14: error: expected expression
if ( v48 !=  struct ref ) 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/df_analyse_1/src/df.c:2898:14: error: expected expression
if ( v53 ==  struct ref ) 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/df_analyse_1/src/df.c:2906:14: error: expected expression
if ( v53 ==  struct ref ) 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/df_analyse_1/src/df.c:2912:23: error: expected expression
while ( next->ref !=  struct ref ) 
                      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/df_analyse_1/src/df.c:2932:12: error: expected expression
*( _OWORD *)&insns[v26].defs = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/df_analyse_1/src/df.c:2932:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&insns[v26].defs = 0LL; 
   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/df_analyse_1/src/obj/df.o] Error 1
